--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                     <div class="collapse navbar-collapse ml-auto"  id="navbarNav">
                                       <ul id="navigation-bar" class="navbar-nav">
                                         <li class="nav-item active">
-                                          <a class="nav-link" href="file:///C:/Users/PUJIT/Desktop/5th%20Sem/DBMS%20PROJECT/Enroll.html">Enroll<span class="sr-only">(current)</span></a>
+                                          <a class="nav-link" href="Enroll.html">Enroll<span class="sr-only">(current)</span></a>
                                         </li>
                                         <li class="nav-item">
                                           <a class="nav-link" href="#">Manager</a>
